# course-project-clean-squad

./: CMakeLists.txt  dependencies.cmake
app/: CMakeLists.txt  Main.cpp  clean_app.cpp
docs/design/: DESIGN.md
docs/design/BehavioralDiagrams/: BehavioralDiagrams.md  assignTaskSequenceDiagram.puml  duringTaskSequenceDiagram.puml
docs/design/classDiagrams/: ClassDiagrams.md  Tasks.puml  classDiagrams.puml  firstClassDiagram.puml
docs/design/sequenceDiagrams/: BehavioralDiagrams.md  SEQUENCEDIAGRAMS.md  duringTask.puml  makeTask.puml
docs/design/usecases/: UseCases.md  uc1.puml  uc2.puml  uc3.puml
docs/sprintReviewDocuments/: 10.26_SprintReviewDocument  10.26_SprintReviewDocument.md  11.16_Standup.md  11.30_SprintReviewDocument.md  11.9_SprintReviewDocument.md  12.14_SprintReviewDocument.md  12.14_StandupReviewDocument.md  12.7_Standup.md  20231102_Standup  20231102_Standup.md  sprint-2-review.md
docs/user-guide/: USER_GUIDE.md
include/libclean/: Robot.hpp  Room.hpp  Simulation.hpp  Task.hpp  mongoDB.hpp
include/libhello/: Robot.hpp  Simulation.cpp  room.hpp  simulation.hpp
src/: Main.cpp  Robot.cpp  Room.cpp  SRC.md  Simulation.cpp  Task.cpp  mongodb.cpp  room.cpp
tests/: CMakeLists.txt  testRobot.cpp  testing.cpp
